feat: add to old services

--- a/service.html
+++ b/service.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>I can't think of possible services we offer to the government</h1>
+    <p>We are a team</p>
   </body>
 </html>
