I hope I am on the right track

--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
   <body>
     <h1>This is the home page that I will be working with</h1>
     <p>Oppooooor</p>
+    <h3>Getting exciting</h3>
   </body>
 </html>
